--- a/maven_central_analysis.ipynb
+++ b/maven_central_analysis.ipynb
@@ -1044,7 +1044,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Table III - ABSOLUTE AND RELATIVE NUMBER OF DIRECT AND INDIRECT DEPENDENTS OF ARTIFACTS\n"
+      "Table II - ABSOLUTE AND RELATIVE NUMBER OF DIRECT AND INDIRECT DEPENDENTS OF ARTIFACTS\n"
      ]
     },
     {
