--- a/maven_central_analysis.ipynb
+++ b/maven_central_analysis.ipynb
@@ -1217,13 +1217,13 @@
     "# Generate and display Table II\n",
     "tableii = analyser.create_pfeiffer_table_ii(top_n=25)\n",
     "\n",
-    "print(\"Table II - ABSOLUTE AND RELATIVE NUMBER OF DIRECT AND INDIRECT DEPENDENTS OF PACKAGES (DEPTH TWO AND THREE)\")\n",
+    "print(\"Table II - ABSOLUTE AND RELATIVE NUMBER OF DIRECT AND INDIRECT DEPENDENTS OF PACKAGE RELEASES (DEPTH TWO AND THREE)\")\n",
     "display(HTML(tableii.reset_index(drop=True).to_html(escape=False)))\n",
     "\n",
     "\n",
-    "# Generate and display Table III - Artifact Dependents from CSV\n",
+    "# Generate and display Table II - Artifact Dependents \n",
     "table_iii = analyser.create_artifact_dependents_table(top_n=45)\n",
-    "print(\"\\nTable III - ABSOLUTE AND RELATIVE NUMBER OF DIRECT AND INDIRECT DEPENDENTS OF ARTIFACTS\")\n",
+    "print(\"Table II - ABSOLUTE AND RELATIVE NUMBER OF DIRECT AND INDIRECT DEPENDENTS OF PACKAGES (DEPTH TWO AND THREE)\")\n",
     "display(HTML(table_iii.reset_index(drop=True).to_html(escape=False)))\n",
     "\n",
     "\n",
